CTT GUI Updated
GUI of CTT Tool modified and refactored. Command line build of conformance Test Tool GUI is now supported.
Some modification done based on previous comments

Change-Id: I22029e795a687c58b064af3cf7bbe81477d27af0
Signed-off-by: Mushfiqul Islam <i.mushfiq@samsung.com>
Reviewed-on: https://gerrit.iotivity.org/gerrit/4711
Tested-by: jenkins-iotivity <jenkins-iotivity@opendaylight.org>
Reviewed-by: Sungkyu Ko <sungkyu.ko@samsung.com>